--- a/manipulation.tex
+++ b/manipulation.tex
@@ -10,16 +10,52 @@ Pour cette expérience, le matériel suivant a été utilisé:
     \item Barrière infrarouge
     \item Électro-aimant
 \end{itemize}
+
+
+Tout d'abord, il y avait 6 masses de 100g numérotées à disposition pour la suite des travaux pratiques, nous avons commencé par les mesurer afin de choisir les plus précises. Voici les mesures obtenues:
+\begin{table}[h]
+\begin{tabular}{|l|l|}
+\hline
+$n^o$ & Masse \\
+\hline
+1 & 100.23 g \\
+2 & 100.23 g \\
+3 & 100.87 g \\
+4 & 101.23 g \\
+5 & 100.80 g \\
+6 & 100.08 g \\
+\hline
+\end{tabular}
+\end{table}
+3 masses seulement étaient nécessaires pour la suite des opérations, les numéros 1, 2 et 6 ont donc été choisies, leurs valeurs étant les plus proches de celle souhaitée.
+
+Il y a plusieurs choses auxquelles il a fallu être attentif concernant le matériel de cette expérience.\\
+Tout d'abord, il a fallu mettre à plat le rail à coussin d'air pour être certain que les chariots n'iraient pas naturellement d'un côté ou de l'autre par simple effet de la gravitation.\\
+Il a fallu aussi être prudent avec la puissance de la ventilation du rail, trop puissant et le chariot a tendance à flotter un peu trop haut et à taper le rail, le ralentissant. Par contre si l'air arrivait avec un débit trop faible, le mobile frottait sur le rail et était donc ralentit, faussant les résultats.\\
+À chaque chagement de masse, la ventilation a donc été réglée pour éviter ces effets indésirables.\\
+
 \subsection{Méthode}
-\subsubsection{}
-Attention rail plat
-masse touche pas sol
+
+\subsubsection{Accéleration}
+Pour cette première partie de la manipulation, une masse de $5.01 \pm 01g$ était attachée par une ficelle à un chariot dont la masse variait par pas de 100g. Le chariot était retenu par un électro-aimant déclenchable à distance par le biais d'un boîtier Cassy. Une languette de largeur détermninée passait alors devant une barrière infrarouge, le temps de passage de cette languette permettant ensuite de détérminer la vitesse instantanée du mobile. Une fois l'électro-aimant éteint par le biais du logiciel, tout passage devant la barrière infrarouge était enregistré.
+La longueur de la ficelle a été choisie de manière à ce que la masse de 5g qui y était suspendue ne touche pas le sol même lorsque le chariot était en bout de course garantissant ainsi que la force appliquée au chariot restait constante.
+Un souci relevé lors de cette parie de la manipulation concernait l'électroaimant dont la fiabilité laissait parfois à désirer et qui ne laissait pas toujours partir le chariot. Les mesures durant lesquelles le départ du mobile n'était pas franc ont été refaites.
+
+Pour les mesures du chariot pesant 400g, les masses 1, 2 et 6 ont été utilisées. Pour 300g, les masses 1 et 2. Pour 100g, uniquement la masse numéro 1.
+
+\subsubsection{Réultats}
 
 \subsubsection{Collision}
 Pour cette manipulation, il a fallu commencer par enlever la barrière infrarouge et installer la caméra CCD.
 La mise en place et le calibrage de cet apareil de mesure s'est avéré relativement long. Il a d'abord fallu trouver la distance idéale pour capturer le déplacement des chariots tout le long du rail, adapter l'angle de prise de vu pour obtenir une intensité homogène lors du déplacement des chariots et choisir la puissance des LEDs installées sur le capteur. Une difficulté supplémentaire rencontrée lors de cette phase de mise au point étant la partie métallique de la poulie à l'extrêmité droite du rail qui était considérée comme un chariot et contribuait à créer du bruit lors de la capture de données. Une modification mineure de l'angle de la caméra a réglé ce problème.
 La caméra a ensuite été calibrée avec le logiciel INSERT\_LOGICIEL afin de pouvoir représenter le rail sur une échelle physique en mètres et non en pixels tel que la caméra l'interprète naturellement.\\
-Les deux chariots ont ensuite été équipés des poids de 100g mesurés précedemment.
+Les deux chariots ont ensuite été équipés des poids de 100g mesurés précedemment.\\
 
 L'expérience s'est ensuite déroulée en deux parties, la première où les chocs étaient complétement élastiques et les deux chariots équipés de pare-chocs métalliques. La seconde où l'un des chariots était muni d'une auguille pouvant se planter dans la gomme dont l'autre chariot était équipé.
+
+Pour chacune des deux phases, deux combinaisons de masses ont été testées. Une fois le chariot de gauche pesait 400g et celui de droite 200g, lors de la seconde itération les deux chariots possédaient une masse identique de 200g.
+
+\subsubsection{Réultats}
+
+
 \subsection{Conclusion}
