--- a/report.tex
+++ b/report.tex
@@ -199,7 +199,7 @@ pdfcreator=pdflatex]{hyperref}
     \end{center}
     \begin{center}
 	\large
-	Mirko Croci -- EPFL \\
+	Mirko Croci -- HEIG-VD \\
 	\href{http://heig-vd.ch/}{http://heig-vd.ch/} \\
     \end{center}
 
