--- a/manipulation.tex
+++ b/manipulation.tex
@@ -9,11 +9,13 @@ Pour cette expérience, le matériel suivant a été utilisé:
     \item Boîtier d'acquisition Cassy
     \item Barrière infrarouge
     \item Électro-aimant
+    \item Balance de laborattoire (Précision au mg)
 \end{itemize}
 
 
 Tout d'abord, il y avait 6 masses de 100g numérotées à disposition pour la suite des travaux pratiques, nous avons commencé par les mesurer afin de choisir les plus précises. Voici les mesures obtenues:
 \begin{table}[h]
+\centering
 \begin{tabular}{|l|l|}
 \hline
 $n^o$ & Masse \\
@@ -33,6 +35,7 @@ Il y a plusieurs choses auxquelles il a fallu être attentif concernant le maté
 Tout d'abord, il a fallu mettre à plat le rail à coussin d'air pour être certain que les chariots n'iraient pas naturellement d'un côté ou de l'autre par simple effet de la gravitation.\\
 Il a fallu aussi être prudent avec la puissance de la ventilation du rail, trop puissant et le chariot a tendance à flotter un peu trop haut et à taper le rail, le ralentissant. Par contre si l'air arrivait avec un débit trop faible, le mobile frottait sur le rail et était donc ralentit, faussant les résultats.\\
 À chaque chagement de masse, la ventilation a donc été réglée pour éviter ces effets indésirables.\\
+La masse de 5g a elle aussi été mesurée par nos soins donnant la valeur suivante : $5.01 \pm 01g$
 
 \subsection{Méthode}
 
@@ -45,17 +48,45 @@ Pour les mesures du chariot pesant 400g, les masses 1, 2 et 6 ont été utilisé
 
 \subsubsection{Réultats}
 
+Les résultats nous montrent que la loi qui décrit le mouvement d'un mobile soumis à une accélération constante est effectivement quadratique et que la constante devant l'accélération vaut effectivement $\frac{1}{2}$.
+
 \subsubsection{Collision}
 Pour cette manipulation, il a fallu commencer par enlever la barrière infrarouge et installer la caméra CCD.
 La mise en place et le calibrage de cet apareil de mesure s'est avéré relativement long. Il a d'abord fallu trouver la distance idéale pour capturer le déplacement des chariots tout le long du rail, adapter l'angle de prise de vu pour obtenir une intensité homogène lors du déplacement des chariots et choisir la puissance des LEDs installées sur le capteur. Une difficulté supplémentaire rencontrée lors de cette phase de mise au point étant la partie métallique de la poulie à l'extrêmité droite du rail qui était considérée comme un chariot et contribuait à créer du bruit lors de la capture de données. Une modification mineure de l'angle de la caméra a réglé ce problème.
 La caméra a ensuite été calibrée avec le logiciel INSERT\_LOGICIEL afin de pouvoir représenter le rail sur une échelle physique en mètres et non en pixels tel que la caméra l'interprète naturellement.\\
-Les deux chariots ont ensuite été équipés des poids de 100g mesurés précedemment.\\
+Les deux chariots ont ensuite été équipés des poids de 100g mesurés précedemment. \\
 
 L'expérience s'est ensuite déroulée en deux parties, la première où les chocs étaient complétement élastiques et les deux chariots équipés de pare-chocs métalliques. La seconde où l'un des chariots était muni d'une auguille pouvant se planter dans la gomme dont l'autre chariot était équipé.
 
 Pour chacune des deux phases, deux combinaisons de masses ont été testées. Une fois le chariot de gauche pesait 400g et celui de droite 200g, lors de la seconde itération les deux chariots possédaient une masse identique de 200g.
 
+Les chariots ont étés mesurés avec la balance de laboratoire pour connaître leur masse précise:
+\begin{table}[h]
+\centering
+\caption{Collision élastique}
+\begin{tabular}{|l|l|l|}
+\hline
+Chariot 1 & 399.68 $\pm$ 0.01 g & 200.00 $\pm$ 0.01 g \\
+Chariot 2 & 200.16 $\pm$ 0.01 g & 200.16 $\pm$ 0.01 g \\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}[h]
+\centering
+\caption{Collision inélastique}
+\begin{tabular}{|l|l|l|}
+\hline
+Chariot 1 & 400.12 $\pm$ 0.01 g & 200.07 $\pm$ 0.01 g \\
+Chariot 2 & 200.06 $\pm$ 0.01 g & 200.02 $\pm$ 0.01 g \\
+\hline
+\end{tabular}
+\end{table}
+
+
 \subsubsection{Réultats}
 
 
 \subsection{Conclusion}
+En conclusion, la nature quadratique de la loi régissant l'accéleration d'un objet qu'on pourrait assimiler à un point matériel a pu être observée dans des conditions correctes.
+La conservation de la quantité de mouvement a elle aussi pu être constatée. Les incertitudes qui subsistent sont développées dans la conclusion qui suit.
