--- a/theorie.tex
+++ b/theorie.tex
@@ -1,14 +1,10 @@
 \subsection{MRUA}
 Le MRUA est comme son nom l'indique, un Mouvement Rectiligne Uniformément Accéléré. C'est en effet un mouvement relativement simple qui peut se décrit en général par trois équations horaires, celles de la position de la vitesse et l'accélération:
-\begin{equation}
-x(t) = a\cdot \frac{1}{2} \cdot t^2 + v_0 \cdot t + x_0 \\
-\end{equation}
-\begin{equation}
-v(t) = a \cdot t + v_0
-\end{equation}
-\begin{equation}
-a(t) = a
-\end{equation}
+\begin{align}
+& x(t) = a\cdot \frac{1}{2} \cdot t^2 + v_0 \cdot t + x_0 \\
+& v(t) = a \cdot t + v_0 \\
+& a(t) = a
+\end{align}
 
 \subsection{Quantité de mouvement}
 La quantité de mouvement et particulièrement sa conservation, sont des notions très intéressantes dans le cadre de la mécanique classique. Dans notre cas, nous allons l'utiliser pour caractériser le mouvement résultant d'un choc entre deux objets.
@@ -18,6 +14,13 @@ p = m \cdot v
 \end{equation}
 On peut prendre une définition plus large de cette notion en l'appliquant à un système de points matériels, ce qui nous donne:
 \begin{equation}
-p_tot = p_1 + p_2 + p_3 + ... = m_1 \cdot v_1 + m_2 \cdot v_2 + m_3 \cdot v_3 + ...
+p_{tot} = p_1 + p_2 + p_3 + ... = m_1 \cdot v_1 + m_2 \cdot v_2 + m_3 \cdot v_3 + ...
 \end{equation}
-Il est toutefois plus intéressant de savoir que cette quantité de mouvement, en l'absence de forces externes, se conserve durant l'évolution du système
+Il est toutefois plus intéressant de savoir que cette quantité de mouvement, en l'absence de forces externes, se conserve durant l'évolution du système et notamment durant les collisions élastiques:
+\begin{equation}
+p_{tot} = m_1 \cdot v_1 + m_2 \cdot v_2 = m_1 \cdot v_3 + m_2 \cdot v_4
+\end{equation}
+et inélastiques:
+\begin{equation}
+p_{tot} = m_1 \cdot v_1 + m_2 \cdot v_2 = (m_1 + m_2) \cdot v_3
+\end{equation}
