added theorie part

--- a/manipulation.tex
+++ b/manipulation.tex
@@ -9,7 +9,7 @@ Pour cette expérience, le matériel suivant a été utilisé:
     \item Boîtier d'acquisition Cassy
     \item Barrière infrarouge
     \item Électro-aimant
-    \item Balance de laborattoire (Précision au mg)
+    \item Balance de laboratoire (Précision au mg)
 \end{itemize}
 
 
