--- a/theorie.tex
+++ b/theorie.tex
@@ -1,3 +1,20 @@
+\subsection{Forces}
+Pour cette expérience, il est nécessaire d'être familier avec la force de gravitation et la seconde loi de Newton.
+La force de gravitation s'énonce de manière relativement simple:
+\begin{equation}
+    F_g = m \cdot g
+\end{equation}
+Quant à la seconde loi de Newton:
+\begin{equation}
+    \sum F = m \cdot a
+\end{equation}
+
+En reliant ces deux équations et en supposant que seule la force de gravitation est à l'oeuvre:
+
+\begin{equation}
+    g \cdot (\sum^{n}_{k=1}m_k) = a \cdot (\sum^{n}_{k=1}m_k)
+\end{equation}
+
 \subsection{MRUA}
 Le MRUA est comme son nom l'indique, un Mouvement Rectiligne Uniformément Accéléré. C'est en effet un mouvement relativement simple qui peut se décrit en général par trois équations horaires, celles de la position de la vitesse et l'accélération:
 \begin{align}
