--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,6 @@
 \subsection*{Objectifs du Laboratoire}
 
-Le but de ce laboratoire est d'observer le mouvement rectiligne uniforme et de faire des relevés expérimentaux sur un banc à coussin d'air équipé du matériel adéquat.
+Le but de ce laboratoire est d'observer le mouvement rectiligne uniformément accéléré, la conservation de quantité de mouvement et de faire des relevés expérimentaux sur un banc à coussin d'air équipé du matériel adéquat.
 
 Pour ce faire nous allons procéder en deux étapes:
 
