--- a/manipulation.tex
+++ b/manipulation.tex
@@ -1,3 +1,4 @@
+languettes 0.005 m
 \subsection{Matériel}
 Pour cette expérience, le matériel suivant a été utilisé:
 \begin{itemize}
@@ -13,7 +14,7 @@ Pour cette expérience, le matériel suivant a été utilisé:
 \end{itemize}
 
 
-Tout d'abord, il y avait 6 masses de 100g numérotées à disposition pour la suite des travaux pratiques, nous avons commencé par les mesurer afin de choisir les plus précises. Voici les mesures obtenues:
+Tout d'abord, il y avait 6 masses de 100g numérotées à disposition pour la suite des travaux pratiques, on a commencé par les mesurer afin de choisir les plus précises. Voici les mesures obtenues:
 \begin{table}[h]
     \centering
     \begin{tabular}{|l|l|}
@@ -34,27 +35,45 @@ Tout d'abord, il y avait 6 masses de 100g numérotées à disposition pour la su
 Il y a plusieurs choses auxquelles il a fallu être attentif concernant le matériel de cette expérience.\\
 Tout d'abord, il a fallu mettre à plat le rail à coussin d'air pour être certain que les chariots n'iraient pas naturellement d'un côté ou de l'autre par simple effet de la gravitation.\\
 Il a fallu aussi être prudent avec la puissance de la ventilation du rail, trop puissant et le chariot a tendance à flotter un peu trop haut et à taper le rail, le ralentissant. Par contre si l'air arrivait avec un débit trop faible, le mobile frottait sur le rail et était donc ralentit, faussant les résultats.\\
-À chaque chagement de masse, la ventilation a donc été réglée pour éviter ces effets indésirables.\\
+À chaque changement de masse, la ventilation a donc été réglée pour éviter ces effets indésirables.\\
 La masse de 5g a elle aussi été mesurée par nos soins donnant la valeur suivante : $5.01 \pm 01g$
 
 \subsection{Méthode}
 
 \subsubsection{Accéleration}
-Pour cette première partie de la manipulation, une masse de $5.01 \pm 01g$ était attachée par une ficelle à un chariot dont la masse variait par pas de 100g. Le chariot était retenu par un électro-aimant déclenchable à distance par le biais d'un boîtier Cassy. Une languette de largeur détermninée passait alors devant une barrière infrarouge, le temps de passage de cette languette permettant ensuite de détérminer la vitesse instantanée du mobile. Une fois l'électro-aimant éteint par le biais du logiciel, tout passage devant la barrière infrarouge était enregistré.
+Pour cette première partie de la manipulation, une masse de $5.01 \pm 01g$ était attachée par une ficelle à un chariot dont la masse variait par pas de 100g. Le chariot était retenu par un électro-aimant déclenchable à distance par le biais d'un boîtier Cassy. Une languette de largeur détermninée passait alors devant une barrière infrarouge, le temps de passage de cette languette permettant ensuite de déterminer la vitesse instantanée du mobile. Une fois l'électro-aimant éteint par le biais du logiciel, tout passage devant la barrière infrarouge était enregistré.
 La longueur de la ficelle a été choisie de manière à ce que la masse de 5g qui y était suspendue ne touche pas le sol même lorsque le chariot était en bout de course garantissant ainsi que la force appliquée au chariot restait constante.
 Un souci relevé lors de cette parie de la manipulation concernait l'électroaimant dont la fiabilité laissait parfois à désirer et qui ne laissait pas toujours partir le chariot. Les mesures durant lesquelles le départ du mobile n'était pas franc ont été refaites.
 
 Pour les mesures du chariot pesant 400g, les masses 1, 2 et 6 ont été utilisées. Pour 300g, les masses 1 et 2. Pour 100g, uniquement la masse numéro 1.
 
+La longueur de la course du chariot a varié de 0.1 à 0.8m. La mesure de la vitesse instantanée a été obtenue en mesurant le temps que mettait une languette de $0.005 \pm 0.001m$ fixée sur le chariot.
+\begin{equation}
+    v_{instant} = \frac{0.005}{\Delta T}
+\end{equation}
+Le temps représente simplement le temps écoulé entre le moment où le chariot à été relaché par l'électro-aimant et celui où il passe devant la barrière infrarouge. C'est cette mesure qui est utilisée pour déduire l'accélération du mobile en divisant simplement l'accélération par cette durée.
+
 \subsubsection{Réultats}
+
+\begin{equation}
+    a = \frac{m}{m + M} \cdot g
+\end{equation}
+
+\begin{equation}
+    v = a\cdot t \leftrightarrow s=\frac{1}{2}\cdot a \cdot t^2 \leftrightarrow t = \sqrt[2]{\frac{2s}{a}} = \frac{2s\cdot (m + M)}{mg}
+\end{equation}
+
+INSERT Graphique theorie vs praitque
+
+Certainement à cause des frottements, soit avec le rail, soit avec l'air, les valeurs théoriques sont toujours un peu "en avance" par rapport aux mesures.
 
 Les résultats nous montrent que la loi qui décrit le mouvement d'un mobile soumis à une accélération constante est effectivement quadratique et que la constante devant l'accélération vaut effectivement $\frac{1}{2}$.
 
 \subsubsection{Collision}
 Pour cette manipulation, il a fallu commencer par enlever la barrière infrarouge et installer la caméra CCD.
 La mise en place et le calibrage de cet apareil de mesure s'est avéré relativement long. Il a d'abord fallu trouver la distance idéale pour capturer le déplacement des chariots tout le long du rail, adapter l'angle de prise de vu pour obtenir une intensité homogène lors du déplacement des chariots et choisir la puissance des LEDs installées sur le capteur. Une difficulté supplémentaire rencontrée lors de cette phase de mise au point étant la partie métallique de la poulie à l'extrêmité droite du rail qui était considérée comme un chariot et contribuait à créer du bruit lors de la capture de données. Une modification mineure de l'angle de la caméra a réglé ce problème.
-La caméra a ensuite été calibrée avec le logiciel INSERT\_LOGICIEL afin de pouvoir représenter le rail sur une échelle physique en mètres et non en pixels tel que la caméra l'interprète naturellement.\\
-Les deux chariots ont ensuite été équipés des poids de 100g mesurés précedemment. \\
+La caméra a ensuite été calibrée avec le logiciel VidéoCom Mouvements afin de pouvoir représenter le rail sur une échelle physique en mètres et non en pixels tel que la caméra l'interprète naturellement.\\
+Les deux chariots ont ensuite été équipés des poids de 100g mesurés précedemment, ainsi que de ressorts à leurs extrémités afin d'optimiser l'elasticité du choc et dissiper le moins possible d'énergie lors du choc. \\
 
 L'expérience s'est ensuite déroulée en deux parties, la première où les chocs étaient complétement élastiques et les deux chariots équipés de pare-chocs métalliques. La seconde où l'un des chariots était muni d'une auguille pouvant se planter dans la gomme dont l'autre chariot était équipé.
 
@@ -86,6 +105,8 @@ Les chariots ont étés mesurés avec la balance de laboratoire pour connaître 
 
 \subsubsection{Réultats}
 
+INSERT Graphiques trajectoires elastiques
+Comme l'on peut le constater sur les graphiques de vitesse.
 
 \subsection{Conclusion}
 En conclusion, la nature quadratique de la loi régissant l'accéleration d'un objet qu'on pourrait assimiler à un point matériel a pu être observée dans des conditions correctes.
