--- a/theorie.tex
+++ b/theorie.tex
@@ -16,24 +16,24 @@ En reliant ces deux équations et en supposant que seule la force de gravitation
 \end{equation}
 
 \subsection{MRUA}
-Le MRUA est comme son nom l'indique, un Mouvement Rectiligne Uniformément Accéléré. C'est en effet un mouvement relativement simple qui peut se décrit en général par trois équations horaires, celles de la position de la vitesse et l'accélération:
+Le MRUA est, comme son nom l'indique, un Mouvement Rectiligne Uniformément Accéléré. C'est en effet un mouvement relativement simple qui peut se décrire en général par trois équations horaires, celles de la position de la vitesse et celle de l'accélération:
 \begin{align}
-    & x(t) = a\cdot \frac{1}{2} \cdot t^2 + v_0 \cdot t + x_0 \\
+    & x(t) = \frac{1}{2} \cdot a\cdot t^2 + v_0 \cdot t + x_0 \\
     & v(t) = a \cdot t + v_0 \\
     & a(t) = a
 \end{align}
 
 \subsection{Quantité de mouvement}
-La quantité de mouvement et particulièrement sa conservation, sont des notions très intéressantes dans le cadre de la mécanique classique. Dans notre cas, nous allons l'utiliser pour caractériser le mouvement résultant d'un choc entre deux objets.
+La quantité de mouvement, et particulièrement sa conservation, sont des notions très intéressantes dans le cadre de la mécanique classique. Dans ce rapport, nous allons l'utiliser pour caractériser le mouvement résultant d'un choc entre deux objets.
 Par définition, la loi de la quantité de mouvement relie une grandeur scalaire à la vitesse et la masse d'un objet:
 \begin{equation}
     p = m \cdot v
 \end{equation}
 On peut prendre une définition plus large de cette notion en l'appliquant à un système de points matériels, ce qui nous donne:
 \begin{equation}
-    p_{tot} = p_1 + p_2 + p_3 + ... = m_1 \cdot v_1 + m_2 \cdot v_2 + m_3 \cdot v_3 + ...
+    p_{tot} = p_1 + p_2 + p_3 +... = m_1 \cdot v_1 + m_2 \cdot v_2 + m_3 \cdot v_3 +...
 \end{equation}
-Il est toutefois plus intéressant de savoir que cette quantité de mouvement, en l'absence de forces externes, se conserve durant l'évolution du système et notamment durant les collisions élastiques:
+Il est toutefois plus intéressant de savoir que cette quantité de mouvement, en l'absence de forces externes, se conserve durant l'évolution du système et notamment durant les collisions parfaitement élastiques:
 \begin{equation}
     p_{tot} = m_1 \cdot v_1 + m_2 \cdot v_2 = m_1 \cdot v_3 + m_2 \cdot v_4
 \end{equation}
@@ -41,3 +41,4 @@ et inélastiques:
 \begin{equation}
     p_{tot} = m_1 \cdot v_1 + m_2 \cdot v_2 = (m_1 + m_2) \cdot v_3
 \end{equation}
+Il est toutefois à noter que la quantité d'énérgie cinétique elle n'est pas conservée lors des chocs inélastiques.
