--- a/manipulation.tex
+++ b/manipulation.tex
@@ -105,9 +105,25 @@ Les chariots ont étés mesurés avec la balance de laboratoire pour connaître 
 
 \subsubsection{Réultats}
 
-INSERT Graphiques trajectoires elastiques
-Comme l'on peut le constater sur les graphiques de vitesse.
+INSERT Graphiques trajectoires elastiques 400-200.
+
+\paragraph{Observation préliminaires}
+Sur le graphique de position, on voit très clairement le moment du choc et la vitesse à laquelle chacun des chariots continue sa course.
+Sur celui de vitesse, 
+
+INSERT Graphiques trajectoires elastiques 200-200.
+
+\paragraph{Observation préliminaires}
+Comme l'on peut le constater sur les graphiques de vitesse du cas où les chariots possèdent les deux un masse équivalente, tout le mouvement d'un chariot est transféré à l'autre au moment du choc. Le premier mobile s'arrêtant alors sur place et le second partant avec la vitesse du premier.
+L'arrêt un peu plus tard étant du au choc contre la barrière au bout du rail.
+
+INSERT Graphiques trajectoires inelastiques 200-200.
+
+\paragraph{Observation préliminaires}
+On peut très clairement voir les deux chariots se coller et poursuivre leur trajectoire ensemble.
+À la différence du cas élastique, l'on observe ici 'à l'oeil' que la vitesse finale des deux mobiles réunis est la moyenne de chacun d'entre eux avant la collision.
 
 \subsection{Conclusion}
 En conclusion, la nature quadratique de la loi régissant l'accéleration d'un objet qu'on pourrait assimiler à un point matériel a pu être observée dans des conditions correctes.
 La conservation de la quantité de mouvement a elle aussi pu être constatée. Les incertitudes qui subsistent sont développées dans la conclusion qui suit.
+En annexe sont présentes les données supplémentaires que nous avons recueillies mais ne méritant pas d'être présentées.
