more more more!

--- a/concl.tex
+++ b/concl.tex
@@ -1,2 +1,2 @@
 Les résultats se sont révélés satisfaisant et en accord avec la théorie.
-Pour améliorer l'expérience, il serait intéressant de tenter de faire la même chose dans un milieu sans air afin de supprimer les frottements. Malheureusement cela compliquerait aussi grandement les conditions de travail et limiterait les changements de matériel.cela compliquerait aussi grandement les conditions de travail et limiterait les changements de matériel.
+Pour améliorer l'expérience, il serait intéressant de tenter de faire la même chose dans un milieu sans air afin de supprimer les frottements. Malheureusement cela compliquerait aussi grandement les conditions de travail et limiterait les changements de matériel.
