--- a/theorie.tex
+++ b/theorie.tex
@@ -2,8 +2,10 @@
 Pour cette expérience, il est nécessaire d'être familier avec la force de gravitation et la seconde loi de Newton.
 La force de gravitation s'énonce de manière relativement simple:
 \begin{equation}
+    \label{fg}
     F_g = m \cdot g
 \end{equation}
+Cette version de l'équation n'est valable qu'à la surface de la Terre. $g=9.81$
 Quant à la seconde loi de Newton:
 \begin{equation}
     \sum F = m \cdot a
@@ -12,16 +14,20 @@ Quant à la seconde loi de Newton:
 En reliant ces deux équations et en supposant que seule la force de gravitation est à l'oeuvre:
 
 \begin{equation}
+    \label{2emeloi}
     g \cdot (\sum^{n}_{k=1}m_k) = a \cdot (\sum^{n}_{k=1}m_k)
 \end{equation}
 
 \subsection{MRUA}
 Le MRUA est, comme son nom l'indique, un Mouvement Rectiligne Uniformément Accéléré. C'est en effet un mouvement relativement simple qui peut se décrire en général par trois équations horaires, celles de la position de la vitesse et celle de l'accélération:
+\begin{equation}
 \begin{align}
+    \label{eqmouv}
     & x(t) = \frac{1}{2} \cdot a\cdot t^2 + v_0 \cdot t + x_0 \\
     & v(t) = a \cdot t + v_0 \\
     & a(t) = a
 \end{align}
+\end{equation}
 
 \subsection{Quantité de mouvement}
 La quantité de mouvement, et particulièrement sa conservation, sont des notions très intéressantes dans le cadre de la mécanique classique. Dans ce rapport, nous allons l'utiliser pour caractériser le mouvement résultant d'un choc entre deux objets.
